// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render with collor default 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  border: 2px solid;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

<button
    class="c0"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`render with collor default 2`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  border: 2px solid;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

<button
    class="c0"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`render with collor link 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  border: 2px solid;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #757575;
  padding-left: 0;
  padding-right: 0;
}

.c1:hover:enabled {
  background-color: transparent;
  border-color: transparent;
}

<button
    class="c0 c1"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`render with collor outlined 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  border: 2px solid;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  color: #212121;
}

.c1:hover:enabled {
  background-color: transparent;
}

<button
    class="c0 c1"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with color primary and variant link 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  border: 2px solid;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #757575;
  padding-left: 0;
  padding-right: 0;
}

.c1:hover:enabled {
  background-color: transparent;
  border-color: transparent;
}

<button
    class="c0 c1"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with color primary and variant outlined 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  border: 2px solid;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  color: #212121;
}

.c1:hover:enabled {
  background-color: transparent;
}

<button
    class="c0 c1"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;
